force-app/main/default/objects/Agency_Reporting_Hierarchy__c/Agency_Reporting_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>A lookup mapping object to reflect which of the IATA agents report to another IATA agent for reporting purposes.</description>
    <label>AP Hierarchy</label>
    <nameField>
        <displayFormat>IPR-{00000}</displayFormat>
        <label>AH-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Hierarchy</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>