force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Address_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Details</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>