force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name as per Master Agent Database</inlineHelpText>
    <label>Agency Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>