force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Child_Agency__c.field-meta.xml
<CustomField>
    <fullName>Child_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Agency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Agent you are looking for either does not exist or is not an Agency Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <infoMessage>The Filter allows you to lookup for the Agency Records.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AP Hierarchy</relationshipLabel>
    <relationshipName>AP_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>