force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Child_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Agency_Name__c</fullName>
    <formula>Child_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Agency Name</label>
    <type>Text</type>
</CustomField>