force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distribution Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>