force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>