force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Is_it_Multi__c.field-meta.xml
<CustomField>
    <fullName>Is_it_Multi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it Multi</label>
    <type>Checkbox</type>
</CustomField>