force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Last_File_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_File_Update__c</fullName>
    <description>Format - Month-Year (MMM-20XX)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This reflects when was the last time the information was updated from the IATA file.</inlineHelpText>
    <label>Last File Update</label>
    <length>10</length>
    <type>Text</type>
</CustomField>