force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Master_Agency__c.field-meta.xml
<CustomField>
    <fullName>Master_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Agency Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AP Hierarchy (Master Agency)</relationshipLabel>
    <relationshipName>AP_Hierarchy1</relationshipName>
    <type>Lookup</type>
</CustomField>