force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Master_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Agency_Name__c</fullName>
    <formula>Master_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Agency Group Name</label>
    <type>Text</type>
</CustomField>