force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Master_QIC__c.field-meta.xml
<CustomField>
    <fullName>Master_QIC__c</fullName>
    <formula>Master_Agency__r.Qantas_Industry_Centre_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master QIC</label>
    <type>Text</type>
</CustomField>