force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Multi_link__c.field-meta.xml
<CustomField>
    <fullName>Multi_link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Link</label>
    <referenceTo>Agency_Reporting_Hierarchy__c</referenceTo>
    <relationshipLabel>AP Hierarchy</relationshipLabel>
    <relationshipName>AP_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>