force-app/main/default/objects/Agency_Reporting_Hierarchy__c/fields/Sales_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hierarchy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Hierarchy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>