force-app/main/default/objects/Agency_Reporting_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Agency__c</columns>
    <columns>Master_Agency_Name__c</columns>
    <columns>Multi_link__c</columns>
    <columns>Master_QIC__c</columns>
    <columns>Child_Agency__c</columns>
    <columns>Child_Agency_Name__c</columns>
    <columns>Child_QIC__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Master_Agency_Name__c</field>
        <operation>equals</operation>
        <value>Universal Traveller (formerly Student Flights)- National</value>
    </filters>
    <label>All</label>
</ListView>