force-app/main/default/objects/Agency_Reporting_Hierarchy__c/listViews/All_Multi_s.listView-meta.xml
<ListView>
    <fullName>All_Multi_s</fullName>
    <columns>NAME</columns>
    <columns>Master_Agency__c</columns>
    <columns>Master_Agency_Name__c</columns>
    <columns>Agency_Number__c</columns>
    <columns>Multi_link__c</columns>
    <columns>Master_QIC__c</columns>
    <columns>Child_Agency__c</columns>
    <columns>Child_Agency_Name__c</columns>
    <columns>Child_QIC__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_it_Multi__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Multi&apos;s</label>
</ListView>